--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
     "express-session": "1.15.6",
     "inquirer": "5.1.0",
     "minimist": "1.2.0",
+    "morgan": "1.9.0",
     "passport": "0.4.0",
     "passport-local": "1.0.0",
     "pg": "7.4.1",
     "pg-hstore": "2.3.2",
     "pug": "2.0.0-rc.4",
+    "rotating-file-stream": "1.3.4",
     "sequelize": "4.34.0"
   }
 }
