--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "NODE_ENV=production node server.js",
     "start-dev": "DEBUG=panterjs:* nodemon server.js",
-    "db-setup": "DEBUG=panterjs:* node lib/db-setup.js",
+    "db-setup": "DEBUG=panterjs:* node app/commands/db-setup.js",
     "lint": "standard"
   },
   "repository": {
