--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "chalk": "2.3.1",
     "connect-flash": "0.1.1",
     "cookie-parser": "1.4.3",
+    "cors": "^2.8.4",
     "debug": "3.1.0",
     "dotenv": "5.0.0",
     "express": "4.16.2",
     "express-session": "1.15.6",
     "inquirer": "5.1.0",
+    "method-override": "^2.3.10",
     "minimist": "1.2.0",
     "morgan": "1.9.0",
     "passport": "0.4.0",
