--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "description": "A simple boilerplate for web application.",
   "main": "server.js",
   "scripts": {
-    "start": "NODE_ENV=production node server.js",
-    "start-dev": "DEBUG=panterjs:* nodemon server.js",
-    "db-setup": "DEBUG=panterjs:* node app/commands/db-setup.js",
+    "start": "cross-env NODE_ENV=production node server.js",
+    "start-dev": "cross-env DEBUG=panterjs:* nodemon server.js",
+    "db-setup": "cross-env DEBUG=panterjs:* node app/commands/db-setup.js",
     "lint": "standard"
   },
   "repository": {
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/ffiguereo/panterjs#readme",
   "devDependencies": {
+    "cross-env": "^5.1.3",
     "nodemon": "1.15.1",
     "standard": "11.0.0"
   },
