--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "start": "NODE_ENV=production node server.js",
     "start-dev": "DEBUG=panterjs:* nodemon server.js",
-    "db-setup": "DEBUG=panterjs:* node app/commands/db-setup.js",
+    "db:migrate": "knex migrate:latest --knexfile=database/knexfile.js",
+    "db:seed": "knex seed:run --knexfile=database/knexfile.js",
+    "knex": "knex --knexfile=database/knexfile.js",
     "lint": "standard"
   },
   "repository": {
@@ -30,21 +32,21 @@
     "chalk": "2.3.1",
     "connect-flash": "0.1.1",
     "cookie-parser": "1.4.3",
-    "cors": "^2.8.4",
+    "cors": "2.8.4",
     "debug": "3.1.0",
     "dotenv": "5.0.0",
     "express": "4.16.2",
     "express-session": "1.15.6",
-    "inquirer": "5.1.0",
-    "method-override": "^2.3.10",
-    "minimist": "1.2.0",
+    "faker": "^4.1.0",
+    "knex": "0.14.4",
+    "method-override": "2.3.10",
     "morgan": "1.9.0",
+    "objection": "1.0.0",
     "passport": "0.4.0",
     "passport-local": "1.0.0",
     "pg": "7.4.1",
     "pg-hstore": "2.3.2",
     "pug": "2.0.0-rc.4",
-    "rotating-file-stream": "1.3.4",
-    "sequelize": "4.34.0"
+    "rotating-file-stream": "1.3.4"
   }
 }
