--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "description": "A simple boilerplate for web application.",
   "main": "server.js",
   "scripts": {
-    "start": "NODE_ENV=production node server.js",
-    "start-dev": "DEBUG=panterjs:* nodemon server.js",
+    "start": "cross-env NODE_ENV=production node server.js",
+    "start-dev": "cross-env DEBUG=panterjs:* nodemon server.js",
     "db:migrate": "knex migrate:latest --knexfile=database/knexfile.js",
     "db:seed": "knex seed:run --knexfile=database/knexfile.js",
     "knex": "knex --knexfile=database/knexfile.js",
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/ffiguereo/panterjs#readme",
   "devDependencies": {
+    "cross-env": "5.1.3",
     "nodemon": "1.15.1",
     "standard": "11.0.0"
   },
