--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "dotenv": "5.0.0",
     "express": "4.16.2",
     "express-session": "1.15.6",
-    "faker": "^4.1.0",
+    "faker": "4.1.0",
+    "helmet": "3.12.0",
     "knex": "0.14.4",
     "method-override": "2.3.10",
     "morgan": "1.9.0",
